json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,61 @@
 {
  "items": [
   {
+    "id": "bIGc_q8pT6y7PX8NXhIpqA",
+    "url": "https://remoteok.io/jobs/68806",
+    "title": "Senior Software Engineer @ AdBlock Serving 65 Million Users..",
+    "tags": [
+      "DBG:surround``2N( OR(employe,develop,engin,team,workmat), spread, OR(out,across) )",
+      "DBG:surround``4N( OR(look, search),     4N(OR(distribut, remot), OR(employe,develop,engin,team)) )",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:css/frontend/3",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:javascript/frontend/2",
+      "DBG_TECH1:k/t/w:javascript/nodejs/2",
+      "DBG_TECH1:k/t/w:macos/apple/4",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=8, go=0, nodejs=2, bigdata-ml=0, ruby=0, apple=10, java=1, gamedev=0, php=0, embedded=0, frontend=5}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Adblock",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 8, 2018 12:31:15 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<td><span><h2>Senior Software Engineer @ Adblock Serving 65 Million Users..</h2></span><br><span><h3>Adblock</h3></span></td><div><div><br>About AdBlock<br><br>We are a small team that serves tens of millions of users worldwide. Our main product, AdBlock, has been downloaded 250 million times by users all over the world. Our browser extensions and applications are available in Chrome, Firefox, Safari, and Edge. Our apps are available&nbsp;in the Apple iOS, MacOS, and Google Play stores.<br><br>We are a distributed team spread across North America. While we have a small office in San Francisco, most of our employees work remotely. What unites us is a desire to provide all users with a distraction-free and worry-free Internet experience.<br><br>About You<br>AdBlock is seeking software engineers to join our team to help develop and support our growing roster of products. This role will be responsible for the development of new extensions and applications. Our development cycle is extremely fast. It is common to write code and have it running in production hours later. If you work for us, you will make an impact, immediately.<br><br>In addition to the technical requirements listed below, we look for a few of the same traits in all of our employees. Since we are a small, fully distributed team, we are looking for people that are self-motivated, intellectually curious, and willing to take the initiative to get the job done. We also need people that have great communication skills -- frequent and clear communication is of paramount importance.<br><br>What You Will Do<br><br><br>* Develop new web extension features, which have the potential to be used by tens of millions of users worldwide<br><br>* Maintain and improve AdBlock’s roster of extensions and apps, currently running on Chrome, Firefox, Safari, Edge, as well as on iOS, MacOS, and Android devices<br><br>* Collaborate with the AdBlock team through our project management, design, version control, and support systems<br><br>* Provide meaningful input on the future of our products<br><br><br><br><br>Your Qualifications<br><br><br>* History of meticulous development practices, producing clear, well-documented code.<br><br>* Able to focus on the big picture and the minute details of your task. Our developers wear many hats, including those of developer, architect, release manager and tester.<br><br>* Team player that can explain complex topics to both technical and non-technical team members and end users<br><br>* Mastery of vanilla Javascript programming; advanced grasp of HTML and CSS.<br><br>* Prior experience in web extension development a plus.<br><br>* Five years of related experience.<br><br>* Formal background in computer science strongly preferred.<br><br>* North America or Central America time zone<br><br>* Ability to obtain and maintain work authorization in the United States.<br><br><br><br><br>How to Apply<br>If you are interested in applying, please:<br><br><br>* Send your resume and links to your work at careers@getadblock.com<br><br>* Include a short description of what you can contribute to AdBlock<br><br>* Include the title of the position you are applying for and your name in the title<br><br><br><br><br>Note: AdBlock is not able to sponsor, obtain, and/or petition for temporary visa status for this role.<p>See more jobs at <span>Adblock</span></p></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "GxUA392RRR2k53IKTcdt-g",
     "url": "https://jobspresso.co/job/senior-ios-engineer-3/",
     "title": "Senior iOS Engineer",
