--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,156 @@
 {
  "items": [
   {
+    "id": "w3DZHLYfSoiO-LQudpf8zQ",
+    "url": "http://jobmote.com/jobs/25156-sailpoint-remote",
+    "title": "Sailpoint (REMOTE)",
+    "tags": [
+      "DBG:surround``fulltim 4N remot",
+      "DBG_TECH1:k/t/w:extjs/frontend/8",
+      "DBG_TECH1:k/t/w:java-ee/java/13",
+      "DBG_TECH1:k/t/w:java/java/2",
+      "DBG_TECH1:k/t/w:java/mobile/1",
+      "DBG_TECH1:k/t/w:maven/java/13",
+      "DBG_TECH1:k/t/w:python/python/2",
+      "DBG_TECH1:techWeightMap:{python=2, other=0, dotnet=0, c=0, mobile=1, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=28, gamedev=0, php=0, embedded=0, frontend=8}",
+      "REMOTE1/100",
+      "TECH1/java",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "java"
+    ],
+    "hiringOrganization": {
+      "name": "DEEGIT, INC.",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 8, 2018 1:21:17 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p><strong>Job Status: Full Time ( REMOTE)</strong> </p><p><strong>JD:-</strong></p><p>Primary focus is on SailPoint, both LCM and attestation integrations.<br>2+ years' experience in Security Domain<br>Must have experience with several of the following: Java, J2EE, JSON, Python, HTML, XML, maven, Subversion / GIT, LDAP, AD </p><p>You can reach me on / Ext 323</p><ul><li>provided by Dice Sailpoint </li></ul></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "YYLp6gi7Q4u7WDHiORc0fQ",
+    "url": "http://jobmote.com/jobs/25059-software-implementation-consultant-local-remote",
+    "title": "Software Implementation Consultant - Local Remote!",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG:surround``remot 6W OR(dai,daili,week,weekli,month,monthli) 5W OR(offic,headquart,onsit)",
+      "REMOTE1/50",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Squires Group, Inc",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 8, 2018 5:21:18 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p>The Squires Group has an exciting direct hire, primarily remote, opportunity for a <strong>Software Implementation Consultant</strong>. Are you innovative and ready to learn a new data management platform that helps companies solve big problems and manage billions of dollars in single instances?</p><p>Our client is an award-winning firm, and their CEO was a finalist for the SmartCEO magazine GovStar Award. As a new, cutting-edge, data management platform provider that helps companies solve problems quickly, our client supports many U.S. Government and Fortune 500 clients. In this role, you will become an expert with their unique platform, and work with clients to implement the software that captures and communicates crucial information to make important data-driven decisions fast.</p><p>Our client offers excellent benefits, including <strong>paid health insurance for employee and family</strong>! This role is primarily remote, with once per week presence needed onsite in Columbia, MD or Alexandria, VA. Candidates must be local to MD/DC/NOVA. Per our Federal Government Contract, candidates must be <strong>U.S. Citizens and able to obtain a Secret clearance</strong>.</p><p><strong>Qualifications:</strong></p><ul><li>5 years of experience with the following:<ul><li>Oracle PL/SQL</li><li>HTML</li><li>Data Modeling</li></ul></li></ul><h2>- Excellent customer facing skills</h2><p>Per our Federal Government Contract, candidates must be <strong>U.S. Citizens and able to obtain a Secret clearance</strong>.</p><p><strong>Preferred Qualifications</strong></p><ul><li>Knowledge of Enterprise Architecture, IT Portfolio Management, Asset Management and/or Metadata Management</li><li>TS/SCI clearance </li></ul><p><strong><em>A Thousand Reasons to Give Referral Program:</em></strong></p><p><em>Refer a friend, and you both can earn $1,000 if we place them in a new job opportunity! If you see a position posted by The Squires Group and know the perfect person for the job, please click</em> <em>here</em> <em>to send us your referral.</em></p><p><strong><em>The Squires Group, Inc. is an Equal Opportunity/Affirmative Action Employer.</em></strong></p><ul><li>provided by Dice Oracle PL/SQL, HTML, Data Modeling, Enterprise Architecture, IT Portfolio Management, Asset Management, Metadata Management </li></ul></div></div><div></div></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "YPx05aRbSi6tPV2BOqsGOA",
+    "url": "https://angel.co/start-up-stealth/jobs/140895-cofounder",
+    "title": "CoFounder",
+    "tags": [
+      "Cleveland",
+      "Cofounder",
+      "DBG:surround``remot W OR(contractor,assist,ok)",
+      "New York City",
+      "Product Design",
+      "REMOTE1/100",
+      "Remote OK",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown",
+      "UI/UX Designer"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "InsureBits",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 7, 2018 8:45:53 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><h2>CoFounder at InsureBits</h2><div>Cleveland, New York City, Remote · Cofounder</div></div><div><div>Skills</div><div>Product Design</div><div>Compensation</div><div>No Salary<br>5.0%–20.0%</div><div>Visa Sponsorship</div><div>Not available</div></div><h3>Job Description</h3><div><p>Startup: reinventing insurance on the blockchain:  cell phone insurance with your social/work/affinity network, offering potential for profit sharing.   Currently in private Beta pilot.  CoFounder or founding team member should excel in UI/UX product-market fit/hypothesis testing and 1 or 2 additional buckets of work 1) product development/product personality &amp; trust around social behavior 2) growth hacking using network effects.   Remote OK.</p></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "IfGrSBxETQaHPFdxjhOfHA",
     "url": "https://remote.co/job/vice-president-finance/",
     "title": "Vice President Finance",
@@ -35,6 +185,54 @@
     "published": "Sep 7, 2018 3:33:44 PM",
     "validThrough": "Jan 1, 1970 1:00:00 AM",
     "content": "<h2>Vice President Finance at <span>Mixtiles</span></h2><div><span><i></i> Remote</span>        </div><div>            <h4><strong>VP Finance</strong></h4><p><strong>REMOTE</strong></p><p><strong>CEO TEAM</strong></p><p><strong>FULL-TIME</strong></p><p>Hi there, I’m Eytan, Co-Founder of Mixtiles. Three years ago I started Mixtiles together with David, my business partner and best friend. Since then, we’ve completely changed what people do with their photos and how they bring them to life, with millions of our tiles proudly presented on people’s walls.</p><p>We’re looking for a great VP Finance to join our team. Our company has grown significantly, and so have our finance needs. With our revenue run rate in the tens of millions of dollars, several international subsidiaries, tier-one equity and debt partners, and our own manufacturing facilities in several countries, we need a VP Finance who believes in our vision and can help us scale in pursuit of becoming the way the entire world puts photos on walls.</p><p><strong>What will you do?</strong></p><ul><li>You’ll take ownership of our existing financial processes and systems.</li><li>You’ll make our finances predictable and safe for high growth.</li><li>You’ll use your intimate understanding of our business to initiate growth strategies, such as sophisticated pricing schemes, shipping optimizations, marketing optimizations, supply chain modeling and raising growth capital.</li><li>You’ll own the company’s financial dashboards.</li><li>You’ll find new angles of looking at the company’s data in a way that’s actionable and has high impact.</li><li>You’ll work directly with our CEO, other executives and our board.</li><li>You’ll be a major contributor to the company’s success.</li></ul><p><strong>Who should you be?</strong></p><ul><li>We’re looking for someone who is data-driven; comfortable with modeling, statistics and data projects. While we expect you to have a deep understanding of all aspects of the financial side of the company (reporting, taxes, accounting, debt) we also expect you to have a passion for the business side (the market, competition, valuation, etc.). The way we see it, they’re two sides of the same entity.</li><li>You’re a player-coach who can get a lot done by yourself and can also lead a small team. You’re good with technology and have a lot of experience with Google Sheets. Great social skills are essential; people should love talking with you. You’ll have a sense of ownership and high standards.</li></ul><p><strong>Mixtiles is a fully remote company</strong></p><p>We’re a fully remote company. We don’t have a central office, and we all work from home or a shared office space of our choice. Working from home allows us to live a better life, and we think it’s also more productive. It isn’t for everyone, but we think it is for a lot of people. And we’ve noticed that people who like it, really like it.</p><p><strong>Our Vision</strong></p><p>Here’s how we think about the future. Every day, masses of people put photos on walls. They’ve been doing it since the days of cave paintings. Even today, they still use hammers, nails and pay $40+ per photo. We believe everyone would prefer a photo that sticks easily, leaves no marks and costs $10. It’s simple, and it makes sense.</p><p>Our focus is on spreading the word about Mixtiles and improving our product to meet our vision. We want Mixtiles to be the way the whole world puts photos on walls. And yes, that also means generating billions of dollars in revenue and profits.</p>        </div><div>        <a href='https://jobs.lever.co/mixtiles/2fd96039-fa21-47ce-9be1-0591e781b7be' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "4A-BqVEPS3-WMLce-buHbw",
+    "url": "https://remote.com/jobs/browse/preview/certification-coordinator",
+    "title": "Certification Coordinator",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "American time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Herrmann",
+      "sameAs": "www.herrmannsolutions.com"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 7, 2018 4:00:33 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "JOB TYPE: Full time<br /><br />LOCATION:<br />Remote<br />Anywhere in<br />North America<br /><br />EXPERIENCE: intermediate<br /><br />COMPANY: Herrmann; 10-50 employees; 75-100% remote;<br /><br />SKILLS:<br />• Program Coordination<br />• certification<br />• Customer Service<br />• Program Management<br />• Conference Coordination<br />• Database Administration<br />• Customer Management<br />• Customer Support<br />• Events Coordination<br />• Communication<br />• Customer Relations<br />• Data Entry<br />• Customer Experience<br /><br />Hiring an experienced  Certification Coordinator who plays an integral role in our mission and success of the Whole Brain initiative and increase the overall number of Thinkers.  This role will proactively serve as the main point of contact and oversees all aspects of certification program delivery:  from location setup, managing facilitator contracts and assignments, managing participant registration, and supporting facilitators and participants in a positive and productive certification experience before, during, and after certification workshop.  Person will also serve as “back up” support to our Service Team as needed.  Individual must be comfortable juggling the demands of travel, daily administrative duties, and have a positive customer-centric personality.  The ability to remain calm in stressful and hectic situations, problem solve, and think on your feet is a must.  This role will also provide order placement support to our Chief Thought Officer’s various speaking engagement and the Revenue Team’s various client workshops. <br /> <br />DUTIES & ESSENTIAL JOB FUNCTION<br />• Start each day, knowing that you are part of an awesome team where hard work, teamwork and dedication are key ingredients<br />• Provide EPIC customer support to internal and external clients<br />• Certification Program Delivery:<br />  - Manage all backend detail of workshop registration – database input, registration, automated notifications, and follow up transactions as needed<br />  - Build positive and productive customer relationships<br />  - Act as liaison between master facilitators, certified practitioners, and Support Team<br />  - Manage communications with certified practitioners – hold regular meetings, share organizational announcements, collect feedback, and provide other outreach as needed<br />  - Assist master facilitator as needed with certification workshops on location in in the continental US<br />- Classroom setup, troubleshooting/resolving participant issue during instruction, classroom breakdown and packing trunks, room clean up, etc.<br /> --Seek to minimize support cost while maximizing program quality, suggest process improvements/streamline existing processes<br />- Document processes and train others on process changes<br />- Monitor feedback, conduct feedback interviews with certified practitioners per/post workshop and on an ongoing basis to develop strategies for better delivery, new products, and provide information on existing support tools and products available<br />- Maintain Certification Practitioner web portal<br />• Event Planning:<br /> - In partnership with the Support Team, work through all the logistical components for each engagement to include order placement of handouts, books, and shipment of goods<br />• Database Management:<br />- Perform weekly/monthly database updates to ensure consistent, accurate clean data<br />- Work closely with Support and Operations team to continue to build out and launch automated processes pertaining to Certification and Database Accuracy<br /><br />QUALIFICATIONS<br />•    Strong analytical and problem-solving skills with attention to detail<br />•    Ability to juggle multiple tasks and respond to urgent requests as needed<br />•    High School diploma or GED required<br />•    Prior experience working in certification or learning environment<br />•    Prior experience in customer support/customer experience role<br />•    Prior experience in event planning<br />•    Experience with database entry/management and online ordering systems<br />•    Ability to travel 25% with advanced notice<br />•    Excellent oral and written skills with proven ability to communicate, present and influence individuals at all levels of the organization<br />•    Self-starter/self-motivated team player with a positive attitude<br />•    Proficient in Microsoft Office and Google Docs Suite<br />•    Experience with NetSuite, Hubspot or Customer Management software, a plus<br />•    Ability to multi-task in a fast-paced environment that requires juggling multiple activities and priorities with tight deadlines<br />•    Flexible and capable of adapting to changing conditions<br />•    Collaborative attitude and sense of teamwork<br />•    Experience working in remote/virtual environment<br /><br />PREFFERED ADDITIONAL EXPERIENCE<br />•    Bachelor’s degree, highly preferred <br />•    Fluency in other non-English language is an asset<br />•    Experience and knowledge of SaaS /subscription business models<br /><br />We are a 100% remote-working company.  Individual may reside anywhere within the US; however, our preference is that the individual reside in the Central and East Coast region so that working hours align with our standard business hours to ensure team interaction and partnership.  <br /><br />You'll be expected to be able to travel when needed, and travel to various locations for internal team activities/meetings that require physical presence.<br /><br />Herrmann is a proudly woman-owned business and an equal opportunity employer and value diversity at our company.  We do not discriminate on the basis of thinking preferences, race, religion, color, national origin, gender, sexual orientation, age, marital status, veteran status, or disability status.",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
