json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,56 @@
 {
  "items": [
   {
+    "id": "WCQcEJvZRSm4zwT0mDztjg",
+    "url": "https://remoteok.io/jobs/68869",
+    "title": "Mac Developer ï£¿",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG_TECH1:k/t/w:macos/apple/4",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=8, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=7, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Toggl",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "€",
+      "minValue": 48000,
+      "maxValue": 48000,
+      "info": "",
+      "unit": "YEAR",
+      "parser": "SalaryParserLargeText",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 13, 2018 4:42:38 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<td><span><h2>Mac Developer </h2></span><br><span><h3>Toggl</h3></span> <span>verified</span></td><div><div>Do you have experience with **Objective-C** but also feel like you can do so much more? Do you ace remote working and love tackling complex problems head-on with no fear?<br><br>If you answered *yes* to both of these questions then wait no more because we've been looking for you. Join us in our quest to create the world's best desktop time tracking app!<br><br>Starting salary at **EUR 48,000 annually**.<br><br>Take the **short skills test** and see if you fit the Toggl desktop superhero costume. <br><br>Free **Toggl t-shirt** for those who do well on the test!<br>***<br>**Toggl** is an insanely simple time tracking tool that can be used on a web browser, desktop and mobile phone. You can **work from anywhere** in the world. We have team members in 25+ countries.<br><br>More vacancies at **toggl.com/jobs**<p>See more jobs at <span>Toggl</span></p></div></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "Rmr59mjNRMemyNW_CZLXNg",
     "url": "https://stackoverflow.com/jobs/195634/ios-software-engineer-universe?a=13BNd2T27N4Y",
     "title": "iOS Software Engineer at Universe (Brooklyn, NY) ",
@@ -205,6 +255,58 @@
     "published": "Sep 11, 2018 10:07:37 AM",
     "validThrough": "Jan 1, 1970 1:00:00 AM",
     "content": "<div><h2>iOS Developer (Remote)</h2></div><div>Company: WorkPilots</div><div>Location: Lisbon, PT</div><div>Remote location: Remote within commuting distance</div><div>Requires Work Permit</div>Level: Intermediate<br>Language: English <div>Mobile Apps Developer<br>Skills:</div><li>Git </li><li>JIRA </li><li>JSON </li><li>MongoDB </li><li>SWIFT </li><h2>Intro</h2><p>Work Pilots is a unique Finnish mobile service that connects people in need of work with households and organizations. We are a fast-moving and dynamic early stage startup. Our mission is to make an impact on society by helping young people, immigrants and others looking to enter the workforce.</p><p>Whilst our headquarters are in Helsinki, we currently have a small tech team working remotely from Portugal. We're looking for two more developers to join the team.</p><h3>Main requirements</h3><p>All candidates should have an IT degree or equivalent. </p><p>Minimum 2 years experience in related field. </p><p>Fluency in English. </p><p>Good interpersonal skills and a strong team player. </p><p>Ability to deliver consistently in a fast-moving environment. </p><p>Hard working, organized and quality minded.</p><h3>Perks</h3><p>Package offered will be competitive and will depend on experience and skills. </p><p>The chance to work with a socially beneficial project. </p><p>A fast-moving startup working with the latest technologies. </p><p>An international environment. </p><p>Large growth potential for the right candidate.</p>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "7BmneIchRmSVpCVlwXvM8w",
+    "url": "https://landing.jobs/at/workpilots/ios-developer-in-lisbon-2018-9-13?utm_campaign=landing+rss&utm_content=iOS+Developer&utm_medium=referral&utm_source=rss",
+    "title": "iOS Developer",
+    "tags": [
+      "DBG:surround``4N( OR(look, search),     4N(OR(distribut, remot), OR(employe,develop,engin,team)) )",
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG:surround``OR(partial,share,amen,semi) 3W remot",
+      "DBG_TECH1:k/t/w:ios/apple/4",
+      "DBG_TECH1:k/t/w:ios/mobile/4",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=12, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=9, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Sep 11, 2018 10:07:37 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><h2>iOS Developer</h2></div><div>Company: WorkPilots</div><div>Location: Lisbon, PT</div><div>Remote location: Partially remote</div><div>Requires Work Permit</div>Level: Intermediate<br>Language: English <div>Mobile Apps Developer<br>Skills:</div><li>Git </li><li>JIRA </li><li>JSON </li><li>MongoDB </li><li>SWIFT </li><h2>Intro</h2><p>Work Pilots is a unique Finnish mobile service that connects people in need of work with households and organizations. We are a fast-moving and dynamic early stage startup. Our mission is to make an impact on society by helping young people, immigrants and others looking to enter the workforce.</p><p>Whilst our headquarters are in Helsinki, we currently have a small tech team working remotely from Portugal. We're looking for two more developers to join the team.</p><h3>Main requirements</h3><p>All candidates should have an IT degree or equivalent. </p><p>Minimum 2 years experience in related field. </p><p>Fluency in English. </p><p>Good interpersonal skills and a strong team player. </p><p>Ability to deliver consistently in a fast-moving environment. </p><p>Hard working, organized and quality minded.</p><h3>Perks</h3><p>Package offered will be competitive and will depend on experience and skills. </p><p>The chance to work with a socially beneficial project. </p><p>A fast-moving startup working with the latest technologies. </p><p>An international environment. </p><p>Large growth potential for the right candidate.</p>",
     "place1": {
       "locality": "UNSET",
       "region": "UNSET",
